Feature/add super admin frontend (#20)
* feat: add super admin invitation dialog and routing

* feat: implement super admins page with add dialog functionality

* feat: add Super Admin management features and update callback page

* feat: enhance Super Admin management page with loading states and improved UI

* feat: improve Super Admin dialog and list with success messages and UI enhancements

* feat: simplify deleteSuperAdmin method and update related tests for improved clarity